Rework CachedResultSetBuilder to require column types